cfn-template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  CloudFormation Template for Roman Numerals Converter Application. 
  This template creates Python Flask Web Application on Amazon Linux 2023  
  EC2 Instance with custom security group allowing http connections on port 80, 8080 and SSH connection on port 22. 
  Roman Numerals Converter Application is downloaded from Github repository, then installed on Flask.

Parameters:
  myVPC:
    Description: Select your VPC.
    Type: AWS::EC2::VPC::Id

  myKeyPairName:
    Description: Select the name of your keyname.
    Type: AWS::EC2::KeyPair::KeyName
    Default: awskey

  myInstanceType:
    Description: Select your Instance Type. 
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t2.nano

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-6.1-x86_64'

Resources:
  myWebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref myInstanceType
      KeyName: !Ref myKeyPairName
      SecurityGroupIds: 
        - !GetAtt myWebSecGroup.GroupId
      Tags: 
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        !Base64 |
          #! /bin/bash
          dnf update -y
          dnf install python3 -y
          dnf install python3-pip -y
          pip3 install flask
          dnf install git -y
          cd /home/ec2-user
          FOLDER="https://raw.githubusercontent.com/emrebiyik/roman-numerals-converter/master"
          wget -P templates ${FOLDER}/templates/index.html
          wget -P templates ${FOLDER}/templates/convert.html
          wget ${FOLDER}/roman-numerals-converter-app.py
          python3 roman-numerals-converter-app.py

  myWebSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Http(80-8080) for Flask WebServer and SSH port for EC2
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: 0.0.0.0/0            
      Tags: 
        - Key: Name
          Value: emre-roman-number-converter
      VpcId: !Ref myVPC

Outputs:
  WebSiteURL:
    Description: Roman Numerals Converter Application URL
    Value: 
      !Sub 
        - http://${PublicDnsName}:8080
        - PublicDnsName: !GetAtt myWebServer.PublicDnsName

# Outputs:
#   WebsiteURL:
#     Value: !Join 
#       - ''
#       - - 'http://'
#         - !GetAtt myWebServer.PublicDnsName
#         - ':8080'
#     Description: Roman Numerals Converter Application URL
